# project-crystallis

./: .gitignore  CMakeLists.txt  README.md
assets/: project_crystallis_skill_sheet.csv
include/: ActiveEffect.h  AttackCommand.h  BattleCommand.h  Button.h  Character.h  Command.h  CommandRegistry.h  Component.h  DashCommand.h  DebuffCommand.h  GameActor.h  GlobalDefs.h  InputHandler.h  Menu.h  MovementComponent.h  UIRender.h
src/: AttackCommand.cpp  Buttons.cpp  Character.cpp  CommandRegistry.cpp  DashCommand.cpp  DebuffCommand.cpp  GlobalDefs.cpp  InputHandler.cpp  Menu.cpp  MovementComponent.cpp  UIRender.cpp  main.cpp
